; ModuleID = '/home/carl/AnghaBench/beanstalkd/extr_prot.c_remove_reserved_job.c'
source_filename = "/home/carl/AnghaBench/beanstalkd/extr_prot.c_remove_reserved_job.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @remove_reserved_job to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @remove_reserved_job(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i32 @is_job_reserved_by_conn(i32* %6, i32* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %15

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32* @remove_this_reserved_job(i32* %12, i32* %13)
  store i32* %14, i32** %3, align 8
  br label %15

15:                                               ; preds = %11, %10
  %16 = load i32*, i32** %3, align 8
  ret i32* %16
}

declare dso_local i32 @is_job_reserved_by_conn(i32*, i32*) #1

declare dso_local i32* @remove_this_reserved_job(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
